# PibbyApocalypsePSX

./: .gitignore  CMakeLists.txt  COMPILE.md  FORMATS.md  TimFixup.py  build.bat  build.sh  funkin.xml  psx-ify.py  shit.txt
.github/workflows/: build.yml
assets/characters/: pibby.json
assets/music/: freakyMenu_1.ogg.sfk
character/: bfweeb.c  gf.c  gfweeb.c  mom.c
iso/: lab - Shortcut.lnk
iso/characters/bf/: bf5.png.txt  bfweeb.json  bfx.json  xmasbf3.png.txt
iso/characters/bfcn/: bf1.png.txt  bfcn.json
iso/characters/cumball/: cumball.json
iso/characters/dad/: dad.json
iso/characters/darwin/: d2.png.txt  darwin.json
iso/characters/finncn/: finncn.json  idle4.png.txt
iso/characters/gf/: gfweeb.json  gfx.json
iso/lab/: back2.png.txt  dark.pdn  lab.rar
iso/menu/: bg1.png.txt
iso/school/: ch1.png.txt
iso/sounds/: USE_VAGEDIT_TO_CONVERT_THESE.txt
iso/void/: as.rar  back4.png.txt
iso/week1/: back1.pdn  back1.png.txt  ch2.png.txt
iso/week5/: back6.png.txt
iso/week6/: senpaidialogue.txt
src/: animation.c  animation.h  archive.c  audio.h  character.c  character.h  debug.c  dialoguebox.old  fixed.h  font.c  font.h  font_arialmap.h  font_cdrmap.h  gfx.h  io.h  loadscr.c  main.c  main.h  menu.c  menu.h  mutil.c  mutil.h  object.c  object.h  pad.h  pause.c  pause.h  player.h  psx.h  random.c  random.h  save.c  save.h  stage.c  stage.h  stagedef_disc1.h  stagedraw.c  stagedraw.h  str.h  strdef.h  (+3 more)
src/character/: chardef.c  chardef.h  gfdef.c  gfdef.h  playerdef.c  playerdef.h  speaker.c
src/object/: combo.c  combo.h  splash.c  splash.h
src/psx/: audio.c  gfx.c  io.c  pad.c  psx.c  str.c  stream.c  stream.h  timer.c
src/stage/: dummy.c  lab.c  lab.h  school.c  school.h  void.c  void.h  week1.c  week2.c  week3.c  week4.c  week5.c  week6.c
tools/: CMakeLists.txt
tools/funkinchartpak/: funkinchartpak.cpp
tools/funkinchrpak/: funkinchrpak.cpp
tools/funkintimconv/: funkintimconv.c
tools/funkinvagpak/: adpcm.cpp  funkinvagpak.cpp
tools/psxavenc/: common.h  filefmt.c
(+18 files in other folders)
